<resources>
    <string name="history_photo">History photo</string>
    <string name="app_name">BulgariaTour</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Bulgaria Tour</string>
    <string name="title_activity_places_list">Places</string>
    <string name="title_activity_detail">Detail</string>
    <string name="nav_header_subtitle">http://www.bulgariatravel.org/bg</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_image">title image</string>
    <string name="dummy_content">Dummy content</string>
    <string name="detail_image">detail_image</string>
    <string name="bourgas">Bourgas</string>
    <string name="island_anastasia">Island world Anastasia</string>
    <string name="island_anastasia_detail">St. Anastasia Island, formerly called Bolshevik Island,
        is a Bulgarian islet in the Black Sea.\n It is located 1.5 km off the coast near Chernomorets,
        at 12 metres above sea level, and covers a territory of one hectare.\t It is the only
        inhabited island off the Bulgarian Black Sea Coast.The island is supplied with electricity
        and drinking water. It is named after the former St. Anastasia convent located on it.\t
        The convent had existed since the Middle Ages and was reconstructed during the 18th-19th
        century. It has been abandoned since 1923, when the island was transformed into a prison.
        Today, in addition to the monastery with its church, there is a lighthouse situated on the
        island, as well as a museum, a restaurant, a small quay, a conference hall and two
        guesthouses with a total of five rooms available to tourists. In the summer, the island is
        accessible from Burgas via boat services running back and forth multiple times a day.\n
        Released under CC-BY-SA</string>
    <string name="burgas_port_detail">Port of Burgas is the Bulgarian port. It is well-established
        as the Trans-European Ten-T Trans-European Transport Network. Situated in the bay of the
        same name in the westernmost part of the Black Sea coast of Burgas, the port has a total
        of 19 ship sites with a maximum allowable water catchment of 12.3 m.  Port Bourgas is part
        of the Bourgas Port District, which covers the area from Cape Emin to Rezovska River and
        includes a total of 8 (state and private) port operators: Port Bourgas, Port Rosenets-Lukoil
        Neftochim, BMF Port Bourgas, Dockyard Port Bourgas, Fishport, , Liberty Port, Nesebar
        terminal.\n Released under CC-BY-SA</string>
    <string name="sea_beach">Sea beach</string>
    <string name="sea_beach_detail">The beach of Kraimorie attracts many tourists mostly because of
        its sand - mild, golden and without stones. The beach itself is long but narrow. The water
        is shallow and the seabed is sloping and without drastic changes in depth. Part of the beach
        is guarded by lounges and umbrellas. Kraimorie Beach is quiet and there are campsites,
        restaurants, shops, bars and family hotels in the vicinity, and free parking is provided for
        the convenience of the beachmen.\n Released under CC-BY-SA</string>
    <string name="night_city">Night_city</string>
    <string name="night_city_detail">Nightlife is most interesting part, here can be found original
        places, symbols of the nightlife. Bourgas, is one of the cities in Bulgaria with the
        strongest nightlife. Although it is a summer tourist destination for the sea, here you will
        find quality entertainment throughout the year. If you are from Burgas - comment on the
        selection and keep us informed about the changes in your preferences. Night life is not a
        good life, but it\'s my life.\n Released under CC-BY-SA</string>
    <string name="light_house">Beach Light House</string>
    <string name="old_fasion_trail_detail">Burgas Central railway station (Tsentralna zhelezopatna
        gara Burgas) is the main station serving the Black Sea city and municipality of Burgas, the
        fourth most populous city, and the largest and most important port, in Bulgaria.Opened in
        1903,[1] the station is the terminus of the line from Karnobat, which links Burgas with the
        rest of Bulgaria rail network. \n Released under CC-BY-SA</string>
    <string name="sunrise_in_burgas">Sunrise in Burgas</string>
    <string name="old_fasion_trail">Old fashion trail</string>
    <string name="rila">Rila</string>
    <string name="mountain_rila">Mountain Rila</string>
    <string name="rila_lakes">The Seven Rila Lakes (Bulgarian: Седемте рилски езера, transliterated:
        Sedemte rilski ezera) are a group of glacial lakes, situated in the northwestern Rila
        Mountains in Bulgaria. They are the most visited group of lakes in Bulgaria. The lakes are
        situated between 2,100 and 2,500 metres elevation above sea level.  Each lake carries a name
        associated with its most characteristic feature. The highest one is called Salzata
        (\"The Tear\") due to its clear waters that allow visibility in depth. The next one in
        height carries the name Okoto (\"The Eye\") after its almost perfectly oval form. Okoto is
        the deepest cirque lake in Bulgaria, with a depth of 37.5 m. Babreka (\"The Kidney\") is the
        lake with the steepest shores of the entire group. Bliznaka (\"The Twin\") is the largest
        one by area. Trilistnika (\"The Trefoil\") has an irregular shape and low shores. The
        shallowest lake is Ribnoto Ezero (\"The Fish Lake\") and the lowest one is Dolnoto Ezero
        (\"The Lower Lake\"), where the waters that flow out of the other lakes are gathered to form
        the Dzherman River.  The Seven Lakes are a tourist attraction in Bulgaria because of its
        natural environment. The lakes are located one above the other and are connected by small
        streams, which form tiny waterfalls and cascades. Tourist accommodation in the lakes\'
        vicinity include a chalet on the northeastern shore of The Fish Lake, at an elevation of
        2,196 m.[citation needed] The most common time to visit the lakes is summer, in July and
        August, when temperature is above 10 degrees Celsius and the risk of sudden storms is lower.
        [citation needed] During the rest of the year the weather can be severe.[citation needed]
        The lakes usually freeze during October, and do not melt before June. The ice cover can
        reach up to 2 meters.\n Released under CC-BY-SA</string>
    <string name="seven_rila_lakes">Seven Rila Lakes</string>
    <string name="rila_mountain">Rila (Bulgarian: Рила, pronounced [ˈriɫɐ]) is a mountain range in
        southwestern Bulgaria and the highest mountain range of Bulgaria and the Balkans, with its
        highest peak being Musala at 2,925 m. The massif is also the sixth highest mountain in
        Europe (when each mountain is represented by its highest peak only), coming after the
        Caucasus, the Alps, Sierra Nevada, the Pyrenees and Mount Etna, and the highest between the
        Alps and the Caucasus. More than one-third of the mountain is occupied by the Rila National
        Park, the rest lies within the Rila Monastery Nature Park.  The mountain is believed to have
        been named after the river of the same name, which comes from the Old Bulgarian verb \"рыти\"
        meaning \"to grub\".[1][2]  Rila is abundant in glacial lakes (about 200) and hot springs in
        fault areas at the base of the mountain. Some of the Balkans\' longest and deepest rivers
        originate from Rila, including Maritsa, Iskar and Mesta.  Culturally, Rila is famous for the
        Rila Monastery, Bulgaria\'s largest and most important monastery, founded in the 10th
        century by Saint John of Rila. Alongside the cultural landmarks the mountain is also famous
        for the Seven Rila Lakes.\n Released under CC-BY-SA</string>
    <string name="malyovitsa_rila">Malyovitsa  mountain</string>
    <string name="rila_malyovitsa">Malyovitsa is a peak and ski resort in the northwestern part of
        the Rila Mountains in southwestern Bulgaria. It is 2,729 m high and is one of the most
        popular tourist regions in the mountain. The Rila Monastery is situated at its southern foot,
        and Malyovitsa Ski Centre with two downhill tracks and two ski drags is to the north. The
        main starting point for treks in the region is Malyovitsa Hut (at about 2 hours walk from
        the top of the summit).  The Malyovitsa region is the cradle of Bulgarian rock climbing and
        mountaineering. The first organized expeditions were made in 1921–22 by tourists from the
        town of Samokov. The imposant north wall of the summit was first climbed in 1938 by
        Konstantin Savadzhiev and Georgi Stoimenov (about 200 m). That was the greatest success of
        Bulgarian climbers for its time and is deemed as the date of birth of Bulgarian
        mountaineering. Later other walls in the region were climbed too with the most difficult
        routes being made in the 1970s. In the last 15 years, Malyovitsa region has become very
        attractive rock climbing district with the possibilities it gives for mountaineering and
        sport rock climbing.  Other interesting walls and summits are: Zliya Zab (200 m wall with
        one of the most famous climbing routes in the country, Vezhdite), Dvuglav (a 450 m high wall,
        with climbing routes often over 500 m long), Iglata, Dyavolski Igli (several aretes with the
        hardest climbs in the region), Ushite and others. A wall that is available for not so
        experienced rock climbers is Kuklata. It is situated across Malyovitsa hut, 10 minutes
        walking, and the main part of its tours is bolted.\n Released under CC-BY-SA</string>
    <string name="monastery_rila">Rila Monastery</string>
    <string name="rila_monanstery">The Monastery of Saint Ivan of Rila, better known as the Rila
        Monastery (Bulgarian: Рилски манастир, Rilski manastir) is the largest and most famous
        Eastern Orthodox monastery in Bulgaria. It is situated in the southwestern Rila Mountains,
        117 km (73 mi) south of the capital Sofia in the deep valley of the Rilska River at an
        elevation of 1,147 m (3,763 ft) above sea level, inside of Rila Monastery Nature Park. The
        monastery is named after its founder, the hermit Ivan of Rila (876 – 946 AD), and houses
        around 60 monks.  Founded in the 10th century, the Rila Monastery is regarded as one of
        Bulgaria\'s most important cultural, historical and architectural monuments and is a key
        tourist attraction for both Bulgaria and Southern Europe. In 2008 alone, it attracted
        900,000 visitors.[1] The monastery is depicted on the reverse of the 1 lev banknote, issued
        in 1999.\n Released under CC-BY-SA</string>
    <string name="panicata_lake">Panicata Lake</string>
    <string name="by_alexikoua_cc_by_sa_3_0">By Alexikoua, CC BY-SA 3.0</string>
    <string name="odrysian_kingdom_title">Odrysian kingdom\n460 BC – 46 AD</string>
    <string name="odrysian_kingdom_detail">The Odrysian Kingdom, oʊˈdrɪʒən Ancient Greek:
        Βασίλειον Ὀδρυσῶν Latin Regnum Odrysium was a state union of over 40 Thracian tribes
        and 22 kingdoms that existed between the 5th century BC and the 1st century AD.</string>
</resources>